kustomize-frontend/frontend-svc.yaml
# apiVersion: v1	
# kind: Service	
# metadata:	
#   name: frontend
#   namespace: tsmc-nycu-lab-13
# spec:	
#   ports:	
#   - port: 80	
#     targetPort: 80	
#   selector:	
#     app: frontend
# ---
apiVersion: v1
kind: Service
metadata:
  name: frontend-canary
  namespace: tsmc-nycu-lab-13
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-stable
  namespace: tsmc-nycu-lab-13
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: frontend
